# freebrowse

./: .dockerignore  .editorconfig  .gitignore  LICENSE  README.md  docker-build.sh  package-lock.json  package.json  run.sh
.github/workflows/: deploy-gh-pages.yml
backend/: .env  .gitignore  pixi.toml  pyproject.toml
backend/src/: ai_session.py  dl_session.py  ml_inference.py  qa.py  server.py  utils.py
data/: get-example-data.sh  get-example-volumes.sh  hippo-local.nvd  hippo-remote.nvd  mesh-scene-test.json  mni152-hippo-local.nvd  mni152-hippo-remote.nvd  mni152-local.nvd  mni152-pcasl-local.nvd  mni152-pcasl-remote.nvd  mni152-remote.nvd  options-eg-local.nvd  options-eg-remote.nvd  options-scene-test.json  readme.md  slicetype-scene-test.json
data/local/: hippo.nvd  mni152-pcasl.nvd  pcasl.nvd
data/recursive-test/: basic-scene-test.json
data/remote/: hippo.nvd  mni152-hippo.nvd  (+2 more)
docker/: Dockerfile  README.md  entrypoint.sh
docs/: HIGH-RESOLUTION-USECASE.md  LICENSES.xlsx  SETUP.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.singlefile.ts  vite.config.ts  vitest.config.ts
jupyter/: .gitignore  environment.yml  package.json  pyproject.toml  tsconfig.json
jupyter/jupyter-config/jupyter_server_config.d/: jupyterlab_freebrowse.json
jupyter/jupyterlab_freebrowse/: __init__.py  handlers.py
jupyter/jupyterlab_freebrowse/static/freebrowse/: index.html
jupyter/jupyterlab_freebrowse/static/freebrowse/assets/: index-BYxJRfC9.js  index-BsVbZuOj.css  index-D-NUCR7I.css  index-urB8tu5s.js
jupyter/src/: index.ts
jupyter/style/: index.css
models/: get-model-weights.sh  interseg_unet.py
scripts/: nvd-create.py  nvd-embed.py
(+639 files in other folders)
